<resources>
    <string name="app_name">Perfil Investidor</string>
    <string name="sobre">Saiba mais sobre este questionário</string>
    <string name="nome_usuario">Seu nome</string>
    <string name="greetings">Olá, vamos descobrir o seu perfil de invesrtidor?</string>
    <string name="link">Saiba mais sobre esse questionário:
        <a href="https://www.bancopaulista.com.br/Arquivos/QuestionarioAPI.pdf">
            Aqui</a>
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="questions">Perguntinhas</string>
    <string name="alternativa_1">Alternativa 1</string>
    <string name="alternativa_2">Alternativa 2</string>
    <string name="alternativa_3">Alternativa 3</string>
    <string name="alternativa_4">Alternativa 4</string>
    <string name="allquestions">Perguntas</string>
</resources>
