<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".QuestionsFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView_enunciado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/allquestions"
        android:textAlignment="center"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/radioGroup_all_Questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <RadioButton
            android:id="@+id/radioButton_alt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alternativa_1" />

        <RadioButton
            android:id="@+id/radioButton_alt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alternativa_2" />

        <RadioButton
            android:id="@+id/radioButton_alt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alternativa_3" />

        <RadioButton
            android:id="@+id/radioButton_alt14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alternativa_4" />
    </RadioGroup>

</LinearLayout>